--- a/example.html
+++ b/example.html
@@ -1,10 +1,11 @@
 <html>
   <body>
     <h1>Test Payment Form</h1>
-    <form action="/transactions" method="GET">
+    <form action="/transactions" method="GET" id="outer-payment-form">
       <div id="payment-form"></div>
       <input type="submit" value="I need dis" />
     </form>
   </body>
   <script src="dist/example.js"></script>
 </html>
+
